<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainActivity -->
    <string name="label_video">视频管理</string>
    <string name="label_upload">上传管理</string>
    <string name="label_download">下载管理</string>
    <string name="app_name">SmvpTest</string>
    <string name="title_activity_play_video">PlayVideoActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_test_activity">TestActivity</string>
    <string name="play_video">播放视频</string>
    <string name="upload">上传单个</string>
    <string name="upload_multiple">上传多个</string>
    <string name="upload_test">上传测试</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failure">上传失败</string>
    <string name="cancel_upload">已取消上传</string>
    <string name="start_all">全部开始</string>
    <string name="stop_all">全部暂停</string>
    <string name="cancel_all">全部取消</string>
    <string name="download_success">下载成功</string>
    <string name="download_failure">下载失败</string>
    <string name="cancel_download">已取消下载</string>
    <string name="empty">暂无视频信息！</string>
    <string name="api_limit_exceeded">超过API的最大调用次数。</string>
    <string name="token_wrong">请设置正确的Token</string>

    <!-- fragment_download -->
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">取消</string>
    <string name="play">播放</string>
    <string name="video_title">标题：%1$s</string>
    <string name="video_defenition">清晰度：%1$s</string>
    <string name="upload_progress">进度: %1$d</string>
    <string name="upload_status">状态: %1$s</string>
    <string name="download_progress">进度\n%1$d</string>
    <string name="download_status">状态\n%1$d</string>

    <!-- fragment_upload -->
    <string name="upload_retry">重试</string>
    <string name="upload_status_wait">等待上传</string>
    <string name="upload_status_running">正在上传</string>
    <string name="upload_status_success">上传成功</string>
    <string name="upload_status_failure">上传失败</string>
    <string name="upload_status_wait_network">没有网络连接</string>

    <!-- DetailFragment -->
    <string name="detail">视频信息</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_id">id</string>
    <string name="str_title">title</string>
    <string name="str_description">description</string>
    <string name="str_tags">tags</string>
    <string name="str_activated">activated</string>
    <string name="str_true">true</string>
    <string name="str_false">false</string>
    <string name="str_ok">OK</string>
    <string name="str_smooth">流畅</string>
    <string name="str_standard">标清</string>
    <string name="str_hd">高清</string>
    <string name="select_definition">选择下载视频的版本</string>
    <string name="download_begin">开始下载视频</string>
    <string name="deactivate_prompt">视频未上线,请上线后重试!</string>
    <string name="current_play_progress">当前播放时间：%1$s</string>
    <string name="loading">正在加载，请稍候</string>
    <string name="title_activity_directory_browser">选择需要上传的视频</string>

    <!--PlayActivity-->
    <string name="video1">视频1</string>
    <string name="video2">视频2</string>
    <string name="video3">视频3</string>
    <string name="seek">跳到6s</string>
    <string name="play_pause">播放/暂停</string>
    <string name="show_hide_progress_bar">显示/隐藏进度条</string>

    <string name="no_file_selected">没有选中任何视频文件</string>
    <string name="internal_memory">Internal memory</string>
    <string name="cover_art">Cover art</string>
    <string name="title">Title</string>

    <string name="parent_folder">转到上级目录</string>
    <plurals name="subfolders_quantity">
        <item quantity="other">%d 个子文件夹</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="other">%d 个媒体文件</item>
    </plurals>

    <!--AutoListview-->
    <string name="pull_down_refresh">下拉可以刷新</string>
    <string name="release_to_refresh1">松开刷新</string>
    <string name="pull_up_refresh">上拉加载更多</string>
    <string name="release_to_refresh2">松开加载更多</string>

</resources>