<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/download_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:maxWidth="200dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center" />

    <TextView
        android:id="@+id/download_defenition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/download_title"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginLeft="10dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/download_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:layout_below="@id/download_title" />

    <Button
        android:id="@+id/download_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/download_progressbar"
        android:layout_alignParentLeft="true"
        android:layout_margin="3dp"
        android:text="@string/pause" />

    <Button
        android:id="@+id/download_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/download_progressbar"
        android:layout_toRightOf="@id/download_start"
        android:layout_margin="3dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/download_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/download_progressbar"
        android:layout_toRightOf="@id/download_cancel"
        android:layout_margin="3dp"
        android:text="@string/play" />

    <TextView
        android:id="@+id/download_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/download_progressbar"
        android:layout_toRightOf="@id/download_play"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/download_progress"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@+id/download_cancel" />

    <TextView
        android:id="@+id/download_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/download_progressbar"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:text="@string/download_status"
        android:layout_toRightOf="@id/download_progress"
        android:layout_alignBottom="@id/download_cancel" />


</RelativeLayout>